# Code-Command

./: .gitignore  ComponentID-CoreModulePath-PrimaryRoleinEngine.csv  README.md  WIRING_ROADMAP.md  WiringManifest.json  cc-policy.aln  index.html  worker.js
.connectors/chatgpt/: adapter.js  manifest.aln  policy.aln  sandbox.aln
.core/experimental/: .ccblacklist.aln
.github/workflows/: calibration-ci.yml  cc-invariants.yml
.qwen/: settings.json
.specs/: blacklist.aln  engine.aln  wiring-spec.aln
.src/: ccpolicy.aln
config/: embodied-carbon.v1.yaml  grid-carbon-catalog.v1.yaml  hardware-catalog.v1.yaml  sko-workload-classes.v1.yaml  vault-risk-posture.v1.yaml  workload-distribution.v1.yaml
connectors/github/: adapter.js
core/engine/: Cargo.toml
core/engine/src/: blacklist.rs  blacklist_cache.rs  blacklist_diff.rs  blacklist_pattern.rs  blacklist_summary.rs  cache_key.rs  capacity_engine.rs  capacity_specs.rs  event_router.rs  github_fallback.rs  lib.rs  log.rs  logger.rs  navigator.rs  path.rs  task_queue.rs  tests_engine_contract.rs  validator.rs  validator_plugin.rs  vfs.rs  wiring_graph.rs  wiring_validator.rs
coreengine/src/: panic.rs  tokenwalker.rs
cpp/: cctokenwalker.h
cpp/fallback/: path_sanitizer.cpp
data/grid/: us-west-phx-15min.csv
policies/: eco-calibration-security.v1.md
schemas/: power-catalog-output.v1.schema.json
specs/: api.aln  architecture.aln  blacklist.aln  capacity-report.aln  cc-api-wasm-exports.md  engine.aln  invariants.aln  placement-plan.aln  research_components.aln  sko-size-model.aln  tier-capacity.aln
(+39 files in other folders)
