# FILE: ./core/engine/Cargo.toml

[package]
name = "cc-engine"
version = "0.1.0"
edition = "2021"
description = "Code-Command sovereign validation and VFS engine compiled to WebAssembly."
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# NO external crates. Only the Rust standard library is used to satisfy CC-SOV. [file:2]

[build-dependencies]
wasm-bindgen = "0.2"
